# NewProfile

./: .zshrc  gitClean1.sh  gitClean2.sh
.ssh/: .ssh.rar
CLion/: Default_Nova_C++Format.xml  code_check.xml  myClionFormat.xml
CMake/: CMakePresets.json  cmake-tools-kits.json
CMake/Modules/: FindClangFormat.cmake  FindClangTidy.cmake  FindClangTool.cmake
Clangd/: config.yaml
CompileLib/asio_1_28-hpp/: asio_hpp.rar
CompileLib/boost_1_83-lib/: boost_compile_lib_content.bat
CompileLib/openssl_3_2-dll/: complie-openssl3-dll.bat
GitEcosystem/: .gitconfig  .gitignore  .gitmessage
Json/: CMakeLists.txt  CleanVSCode.cmd  Microsoft.PowerShell_profile.ps1  RemoveToContextMenu.cmd  SyEye64-DevTools.cmd  boost_compile_lib_content.bat  cmake-tools-kits.json  initPro.sh  initfile.cmd  initfile.sh  start_mingw64.cmd
Linux/: .bashrc  .zshrc  convert.py  createlink.sh  mode.sh  sources.list  update.sh  zsh.md
MSYS2/: .zshrc  app_list.sh  caddy_ssl.sh  clean.sh  cp_git_configs.sh  mingw64-git.sh  start_mingw64.cmd
MSYS2/etc/: pacman.conf
MSYS2/pacman.d/: mirrorlist.mingw  mirrorlist.mingw32  mirrorlist.mingw64  mirrorlist.msys
Pwsh/: Microsoft.PowerShell_profile.ps1  PowerShell.rar  settings.json
gitConfig/: .gitconfig
